# template_paper_repo

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.py
figures/: figure1.ipynb  figure2.ipynb
scripts/: analysis_script.py
tests/: test_paper.py
